// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowRecipe tests Draws correctly 1`] = `
<div
  className="margintop"
>
  <Card
    title=""
  >
    <div
      className="download1"
    >
      <img
        className="stort"
        src="pizza.jpg"
      />
      <h1>
        Pizza
      </h1>
      <br />
      <p>
        Beskrivelse: 
        Pizza er god og enkel
      </p>
       
      <p
        className="font-weight-bold"
        style={
          {
            "marginBottom": "0px",
          }
        }
      >
        Kategori:
         
        enkelt
      </p>
    </div>
    <input
      checked={true}
      id="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="checkbox"
    >
      <svg
        id="heart-svg"
        viewBox="467 392 58 57"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Group"
          transform="translate(467 392)"
        >
          <path
            d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
            fill="#AAB8C2"
            id="heart"
          />
          <circle
            cx="29.5"
            cy="29.5"
            fill="#E2264D"
            id="main-circ"
            opacity="0"
            r="1.5"
          />
          <g
            id="grp7"
            opacity="0"
            transform="translate(7 6)"
          >
            <circle
              cx="2"
              cy="6"
              fill="#9CD8C3"
              id="oval1"
              r="2"
            />
            <circle
              cx="5"
              cy="2"
              fill="#8CE8C3"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp6"
            opacity="0"
            transform="translate(0 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
            <circle
              cx="3"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp3"
            opacity="0"
            transform="translate(52 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#9CD8C3"
              id="oval2"
              r="2"
            />
            <circle
              cx="4"
              cy="2"
              fill="#8CE8C3"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp2"
            opacity="0"
            transform="translate(44 6)"
          >
            <circle
              cx="5"
              cy="6"
              fill="#CC8EF5"
              id="oval2"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp5"
            opacity="0"
            transform="translate(14 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#91D2FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp4"
            opacity="0"
            transform="translate(35 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#F48EA7"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#F48EA7"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp1"
            opacity="0"
            transform="translate(24)"
          >
            <circle
              cx="2.5"
              cy="3"
              fill="#9FC7FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="7.5"
              cy="2"
              fill="#9FC7FA"
              id="oval2"
              r="2"
            />
          </g>
        </g>
      </svg>
    </label>
    <p>
      Antall likes: 
      1
    </p>
    <h3>
      Oppskrift:
    </h3>
    <br />
    <div
      className="download2"
    >
      <pre>
        Bland deigen og la den heve
      </pre>
      <h3>
        Ingredienser:
      </h3>
      <br />
      <Row
        key="0"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          1
          . 
          pizzadeig
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          stk
        </p>
      </Row>
      <Row
        key="1"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          2
          . 
          pizza fyll
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          håndfull
        </p>
      </Row>
      <Row
        key="2"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          3
          . 
          kjøttboller
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          400.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          g
        </p>
      </Row>
    </div>
    Porsjoner:
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      4
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
  </Card>
  <a
    href="mailto:?subject=Pizza&body=Pizza er god og enkel %0d%0a http://localhost/#/recipe/edit/1"
  >
    Heidu
  </a>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
  <ButtonSuccess
    onClick={[Function]}
  >
    Last ned oppskriften
  </ButtonSuccess>
  <Card>
    <h3>
      Andre oppskrifter i samme kategori:
    </h3>
    <Row>
      <Cards
        key="1"
        title=""
      >
        <NavLink
          className="black"
          to="/recipe/1"
        >
          <RecipeView
            img="pizza.jpg"
            name="Pizza"
            numbOfPors={4}
          />
        </NavLink>
      </Cards>
    </Row>
  </Card>
</div>
`;

exports[`ShowRecipe tests Number decrement works 1`] = `
<div
  className="margintop"
>
  <Card
    title=""
  >
    <div
      className="download1"
    >
      <img
        className="stort"
        src="pizza.jpg"
      />
      <h1>
        Pizza
      </h1>
      <br />
      <p>
        Beskrivelse: 
        Pizza er god og enkel
      </p>
       
      <p
        className="font-weight-bold"
        style={
          {
            "marginBottom": "0px",
          }
        }
      >
        Kategori:
         
        enkelt
      </p>
    </div>
    <input
      checked={true}
      id="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="checkbox"
    >
      <svg
        id="heart-svg"
        viewBox="467 392 58 57"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Group"
          transform="translate(467 392)"
        >
          <path
            d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
            fill="#AAB8C2"
            id="heart"
          />
          <circle
            cx="29.5"
            cy="29.5"
            fill="#E2264D"
            id="main-circ"
            opacity="0"
            r="1.5"
          />
          <g
            id="grp7"
            opacity="0"
            transform="translate(7 6)"
          >
            <circle
              cx="2"
              cy="6"
              fill="#9CD8C3"
              id="oval1"
              r="2"
            />
            <circle
              cx="5"
              cy="2"
              fill="#8CE8C3"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp6"
            opacity="0"
            transform="translate(0 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
            <circle
              cx="3"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp3"
            opacity="0"
            transform="translate(52 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#9CD8C3"
              id="oval2"
              r="2"
            />
            <circle
              cx="4"
              cy="2"
              fill="#8CE8C3"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp2"
            opacity="0"
            transform="translate(44 6)"
          >
            <circle
              cx="5"
              cy="6"
              fill="#CC8EF5"
              id="oval2"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp5"
            opacity="0"
            transform="translate(14 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#91D2FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp4"
            opacity="0"
            transform="translate(35 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#F48EA7"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#F48EA7"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp1"
            opacity="0"
            transform="translate(24)"
          >
            <circle
              cx="2.5"
              cy="3"
              fill="#9FC7FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="7.5"
              cy="2"
              fill="#9FC7FA"
              id="oval2"
              r="2"
            />
          </g>
        </g>
      </svg>
    </label>
    <p>
      Antall likes: 
      1
    </p>
    <h3>
      Oppskrift:
    </h3>
    <br />
    <div
      className="download2"
    >
      <pre>
        Bland deigen og la den heve
      </pre>
      <h3>
        Ingredienser:
      </h3>
      <br />
      <Row
        key="0"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          1
          . 
          pizzadeig
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          0.8
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          stk
        </p>
      </Row>
      <Row
        key="1"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          2
          . 
          pizza fyll
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          0.8
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          håndfull
        </p>
      </Row>
      <Row
        key="2"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          3
          . 
          kjøttboller
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          300.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          g
        </p>
      </Row>
    </div>
    Porsjoner:
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      3
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
  </Card>
  <a
    href="mailto:?subject=Pizza&body=Pizza er god og enkel %0d%0a http://localhost/#/recipe/edit/1"
  >
    Heidu
  </a>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
  <ButtonSuccess
    onClick={[Function]}
  >
    Last ned oppskriften
  </ButtonSuccess>
  <Card>
    <h3>
      Andre oppskrifter i samme kategori:
    </h3>
    <Row>
      <Cards
        key="1"
        title=""
      >
        <NavLink
          className="black"
          to="/recipe/1"
        >
          <RecipeView
            img="pizza.jpg"
            name="Pizza"
            numbOfPors={4}
          />
        </NavLink>
      </Cards>
    </Row>
  </Card>
</div>
`;

exports[`ShowRecipe tests Number increment works 1`] = `
<div
  className="margintop"
>
  <Card
    title=""
  >
    <div
      className="download1"
    >
      <img
        className="stort"
        src="pizza.jpg"
      />
      <h1>
        Pizza
      </h1>
      <br />
      <p>
        Beskrivelse: 
        Pizza er god og enkel
      </p>
       
      <p
        className="font-weight-bold"
        style={
          {
            "marginBottom": "0px",
          }
        }
      >
        Kategori:
         
        enkelt
      </p>
    </div>
    <input
      checked={true}
      id="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="checkbox"
    >
      <svg
        id="heart-svg"
        viewBox="467 392 58 57"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Group"
          transform="translate(467 392)"
        >
          <path
            d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
            fill="#AAB8C2"
            id="heart"
          />
          <circle
            cx="29.5"
            cy="29.5"
            fill="#E2264D"
            id="main-circ"
            opacity="0"
            r="1.5"
          />
          <g
            id="grp7"
            opacity="0"
            transform="translate(7 6)"
          >
            <circle
              cx="2"
              cy="6"
              fill="#9CD8C3"
              id="oval1"
              r="2"
            />
            <circle
              cx="5"
              cy="2"
              fill="#8CE8C3"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp6"
            opacity="0"
            transform="translate(0 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
            <circle
              cx="3"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp3"
            opacity="0"
            transform="translate(52 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#9CD8C3"
              id="oval2"
              r="2"
            />
            <circle
              cx="4"
              cy="2"
              fill="#8CE8C3"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp2"
            opacity="0"
            transform="translate(44 6)"
          >
            <circle
              cx="5"
              cy="6"
              fill="#CC8EF5"
              id="oval2"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp5"
            opacity="0"
            transform="translate(14 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#91D2FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp4"
            opacity="0"
            transform="translate(35 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#F48EA7"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#F48EA7"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp1"
            opacity="0"
            transform="translate(24)"
          >
            <circle
              cx="2.5"
              cy="3"
              fill="#9FC7FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="7.5"
              cy="2"
              fill="#9FC7FA"
              id="oval2"
              r="2"
            />
          </g>
        </g>
      </svg>
    </label>
    <p>
      Antall likes: 
      1
    </p>
    <h3>
      Oppskrift:
    </h3>
    <br />
    <div
      className="download2"
    >
      <pre>
        Bland deigen og la den heve
      </pre>
      <h3>
        Ingredienser:
      </h3>
      <br />
      <Row
        key="0"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          1
          . 
          pizzadeig
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.3
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          stk
        </p>
      </Row>
      <Row
        key="1"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          2
          . 
          pizza fyll
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.3
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          håndfull
        </p>
      </Row>
      <Row
        key="2"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          3
          . 
          kjøttboller
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          500.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          g
        </p>
      </Row>
    </div>
    Porsjoner:
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      5
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
  </Card>
  <a
    href="mailto:?subject=Pizza&body=Pizza er god og enkel %0d%0a http://localhost/#/recipe/edit/1"
  >
    Heidu
  </a>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
  <ButtonSuccess
    onClick={[Function]}
  >
    Last ned oppskriften
  </ButtonSuccess>
  <Card>
    <h3>
      Andre oppskrifter i samme kategori:
    </h3>
    <Row>
      <Cards
        key="1"
        title=""
      >
        <NavLink
          className="black"
          to="/recipe/1"
        >
          <RecipeView
            img="pizza.jpg"
            name="Pizza"
            numbOfPors={4}
          />
        </NavLink>
      </Cards>
    </Row>
  </Card>
</div>
`;

exports[`ShowRecipe tests Number of likes 1`] = `
<div
  className="margintop"
>
  <Card
    title=""
  >
    <div
      className="download1"
    >
      <img
        className="stort"
        src="pizza.jpg"
      />
      <h1>
        Pizza
      </h1>
      <br />
      <p>
        Beskrivelse: 
        Pizza er god og enkel
      </p>
       
      <p
        className="font-weight-bold"
        style={
          {
            "marginBottom": "0px",
          }
        }
      >
        Kategori:
         
        enkelt
      </p>
    </div>
    <input
      checked={true}
      id="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="checkbox"
    >
      <svg
        id="heart-svg"
        viewBox="467 392 58 57"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Group"
          transform="translate(467 392)"
        >
          <path
            d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
            fill="#AAB8C2"
            id="heart"
          />
          <circle
            cx="29.5"
            cy="29.5"
            fill="#E2264D"
            id="main-circ"
            opacity="0"
            r="1.5"
          />
          <g
            id="grp7"
            opacity="0"
            transform="translate(7 6)"
          >
            <circle
              cx="2"
              cy="6"
              fill="#9CD8C3"
              id="oval1"
              r="2"
            />
            <circle
              cx="5"
              cy="2"
              fill="#8CE8C3"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp6"
            opacity="0"
            transform="translate(0 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
            <circle
              cx="3"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp3"
            opacity="0"
            transform="translate(52 28)"
          >
            <circle
              cx="2"
              cy="7"
              fill="#9CD8C3"
              id="oval2"
              r="2"
            />
            <circle
              cx="4"
              cy="2"
              fill="#8CE8C3"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp2"
            opacity="0"
            transform="translate(44 6)"
          >
            <circle
              cx="5"
              cy="6"
              fill="#CC8EF5"
              id="oval2"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#CC8EF5"
              id="oval1"
              r="2"
            />
          </g>
          <g
            id="grp5"
            opacity="0"
            transform="translate(14 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#91D2FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#91D2FA"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp4"
            opacity="0"
            transform="translate(35 50)"
          >
            <circle
              cx="6"
              cy="5"
              fill="#F48EA7"
              id="oval1"
              r="2"
            />
            <circle
              cx="2"
              cy="2"
              fill="#F48EA7"
              id="oval2"
              r="2"
            />
          </g>
          <g
            id="grp1"
            opacity="0"
            transform="translate(24)"
          >
            <circle
              cx="2.5"
              cy="3"
              fill="#9FC7FA"
              id="oval1"
              r="2"
            />
            <circle
              cx="7.5"
              cy="2"
              fill="#9FC7FA"
              id="oval2"
              r="2"
            />
          </g>
        </g>
      </svg>
    </label>
    <p>
      Antall likes: 
      1
    </p>
    <h3>
      Oppskrift:
    </h3>
    <br />
    <div
      className="download2"
    >
      <pre>
        Bland deigen og la den heve
      </pre>
      <h3>
        Ingredienser:
      </h3>
      <br />
      <Row
        key="0"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          1
          . 
          pizzadeig
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          stk
        </p>
      </Row>
      <Row
        key="1"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          2
          . 
          pizza fyll
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          1.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          håndfull
        </p>
      </Row>
      <Row
        key="2"
      >
        <p
          style={
            {
              "width": "250px",
            }
          }
        >
          3
          . 
          kjøttboller
        </p>
        <p
          style={
            {
              "width": "75px",
            }
          }
        >
          400.0
        </p>
        <p
          style={
            {
              "width": "130px",
            }
          }
        >
          g
        </p>
      </Row>
    </div>
    Porsjoner:
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      4
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
  </Card>
  <a
    href="mailto:?subject=Pizza&body=Pizza er god og enkel %0d%0a http://localhost/#/recipe/edit/1"
  >
    Heidu
  </a>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
  <ButtonSuccess
    onClick={[Function]}
  >
    Last ned oppskriften
  </ButtonSuccess>
  <Card>
    <h3>
      Andre oppskrifter i samme kategori:
    </h3>
    <Row>
      <Cards
        key="1"
        title=""
      >
        <NavLink
          className="black"
          to="/recipe/1"
        >
          <RecipeView
            img="pizza.jpg"
            name="Pizza"
            numbOfPors={4}
          />
        </NavLink>
      </Cards>
    </Row>
  </Card>
</div>
`;
